# mindful-touch

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  PYQT_MIGRATION_PLAN.md  README.md  SYSTEM_NOTIFICATIONS_STATUS.md  backend_entry.py  backend_standalone.spec  build_macos.py  build_nuitka.py  hook-mediapipe.py  hook-pync.py  hook_mpl_faststart.py  logo.icns  main.py  mindful-touch.spec  mindful_touch.py  mindful_touch_gui.py  package.json  pyproject.toml  pyqt_gui.spec  test_basic.py  test_pyqt_gui.py
.github/workflows/: .release-please-config.json  pr-checks.yml  release-please.yml  tag-release.yml
backend/: __init__.py  bootstrap_mpl.py
backend/audio/: __init__.py  sound_manager.py
backend/detection/: __init__.py  camera_utils.py  config.py  main.py  multi_region_detector.py  settings_store.py
backend/gui/: __init__.py  main_window.py
backend/gui/styles/: __init__.py
backend/gui/widgets/: __init__.py  camera_display.py  custom_toggle.py  detection_worker.py
backend/server/: __init__.py  websocket_server.py
config/: default_settings.json
docs/: DETECTION_ALGORITHM_DEEP_DIVE.md  PROJECT_CHARTER.md  TRICTRAK_TECHNICAL_ANALYSIS.md
frontend/: package.json  tailwind.config.js
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/src/: main.rs
frontend/ui/: camera.js  detection.js  index.html  main.js  package.json  style.css  styles.css  vite.config.js
scripts/: debug_frontend.py  prebuild_mpl_cache.py  run_integration_tests.py  test_mock_camera.py
src-tauri/src/: main.rs
src/mindful_touch/: __init__.py  __main__.py  config.py  detector.py  gui_main.py  live_feed.py  main.py  notifier.py
src/mindful_touch/ui/: __init__.py  detection_worker.py  qt_gui.py  settings_widget.py  status_widget.py
tests/: conftest.py  test_websocket_integration.py
ui/: __init__.py  main.js  settings_panel.py  status_overlay.py
ui/panels/: __init__.py  camera_panel.py  detection_panel.py
ui/styles/: __init__.py  theme.py
ui/widgets/: __init__.py  status_badge.py  toggle_switch.py
