[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mindful-touch"
version = "0.1.0"
description = "A gentle awareness tool for mindful hand movement tracking"
authors = [
    {name = "Nikos Maniatis", email = "maniatisni@gmail.com"},
]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.8.1, <3.13"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Graphics :: Capture :: Digital Camera",
    "Topic :: Scientific/Engineering :: Image Recognition",
]

dependencies = [
    "opencv-python>=4.8.0",
    "mediapipe>=0.10.0",
    "numpy>=1.21.0",
    "click>=8.0.0",
    "pydantic>=2.0.0",
    "platformdirs>=3.0.0",
    # Platform-specific notification dependencies will be installed conditionally
    "plyer>=2.1.0", # Cross-platform notifications
    "ruff>=0.11.11",
    "pync>=2.0.3",
    "pyobjus>=1.2.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]

windows = [
    "win10toast>=0.9",
]

macos = [
    # osascript is built into macOS
]

linux = [
    # notify-send is typically pre-installed
]

[project.scripts]
mindful-touch = "mindful_touch.main:main"

[project.urls]
Homepage = "https://github.com/maniatisni/mindful-touch"
Repository = "https://github.com/maniatisni/mindful-touch"
Issues = "https://github.com/maniatisni/mindful-touch/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/mindful_touch"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--cov=src/mindful_touch",
    "--cov-report=term-missing",
    "--cov-report=html",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]



[tool.ruff]
target-version = "py38"
line-length = 150
lint.select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
lint.ignore = [
    "E501",  # line too long
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]
