[package]
name = "mindful-touch"
version = "0.1.0"
description = "A gentle awareness tool for mindful hand movement tracking"
authors = ["Nikos Maniatis <maniatisni@gmail.com>"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
